[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
backface_culling = []

[dependencies]
rand = "0.8.5"
impl_ops = "0.1.1"
nalgebra = "0.31.2"
nalgebra-glm = "0.17.0"
